RESOLVED FIXED282498
[shape-outside] Incorrect (overlapping) rendering when float has shape-outside: ellipse in vertical mode
https://bugs.webkit.org/show_bug.cgi?id=282498
Summary [shape-outside] Incorrect (overlapping) rendering when float has shape-outsid...
alan
Reported 2024-11-02 14:54:54 PDT
ssia
Attachments
Patch (7.99 KB, patch)
2024-11-02 14:56 PDT, alan
no flags
Patch (7.99 KB, patch)
2024-11-04 06:25 PST, alan
no flags
[fast-cq]Patch (8.00 KB, patch)
2024-11-04 07:26 PST, alan
ews-feeder: commit-queue-
alan
Comment 1 2024-11-02 14:56:08 PDT
alan
Comment 2 2024-11-04 06:25:04 PST
alan
Comment 3 2024-11-04 07:26:37 PST
Created attachment 473126 [details] [fast-cq]Patch
EWS
Comment 4 2024-11-04 09:03:42 PST
Committed 286088@main (e60ed769901b): <https://commits.webkit.org/286088@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 473126 [details].
Radar WebKit Bug Importer
Comment 5 2024-11-04 09:04:16 PST
Tim Nguyen (:ntim)
Comment 6 2025-01-02 15:39:11 PST
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/49886
Note You need to log in before you can comment on or make changes to this bug.